# atk-configs

./: WindowsMomentScript.ps1
atks-hotkeys/: BasicHotkeys.ahk  README.md
cpp-vscode-defaultproject/: CMakeLists.txt  CMakePresets.json
jetbrains-vim/: .ideavimrc
vscode-settings/: profile-settings.json  user-settings.json
